Feat: picking
