# api/v1/inventory/entity.go
@@ -100,3 +100,32 @@ type SalesOrderItem struct {
 	Updated          time.Time `db:"updated" json:"updated"`
 	UpdatedBy        string    `db:"updated_by" json:"updated_by"`
 }
+
+type PickingOrder struct {
+	ID          int64     `db:"id" json:"id"`
+	Name        string    `db:"name" json:"name"`
+	SalesOrders string    `db:"sales_orders" json:"sales_orders"`
+	PickingDate time.Time `db:"picking_date" json:"picking_date"`
+	Status      string    `db:"status" json:"status"`
+	Enabled     string    `db:"enabled" json:"enabled"`
+	Created     time.Time `db:"created" json:"created"`
+	CreatedBy   string    `db:"created_by" json:"created_by"`
+	Updated     time.Time `db:"updated" json:"updated"`
+	UpdatedBy   string    `db:"updated_by" json:"updated_by"`
+}
+
+type PickingOrderItem struct {
+	ID             int64     `db:"id" json:"id"`
+	POID           int64     `db:"po_id" json:"po_id"`
+	ItemID         int64     `db:"item_id" json:"item_id"`
+	SKU            string    `db:"sku" json:"sku"`
+	ZohoItemID     string    `db:"zoho_item_id" json:"zoho_item_id"`
+	Name           string    `db:"name" json:"name"`
+	Quantity       int64     `db:"quantity" json:"quantity"`
+	QuantityPicked int64     `db:"quantity_picked" json:"quantity_picked"`
+	Enabled        string    `db:"enabled" json:"enabled"`
+	Created        time.Time `db:"created" json:"created"`
+	CreatedBy      string    `db:"created_by" json:"created_by"`
+	Updated        time.Time `db:"updated" json:"updated"`
+	UpdatedBy      string    `db:"updated_by" json:"updated_by"`
+}
